fixed wrapping of long words and urls in Chrome

--- a/jsoneditor.css
+++ b/jsoneditor.css
@@ -9,6 +9,10 @@
     word-wrap: break-word;
 }
 
+.jsoneditor-value {
+    word-break: break-word;
+}
+
 .jsoneditor-empty {
     background-color: #E5E5E5;
 }
